--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@
 body {
 color: darkcyan;
 text-align: center;
-font-family: Arial;
+font-family: 'Courier New', Courier, monospace;
 font-size: 18px;
 margin: 0;
 padding: 0;
